hphp/test/zend/good/Zend/tests/traits/error_001.php.expectf

Fatal error: Class A may not inherit from final class (foo) in %s/error_001.php on line 16
